--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Martin Qvarnström</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.png" />
     <meta
       name="description"
       content="Martin Qvarnström, developing .NET, JS, CSS, React and more."
